--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <article class="output">
 
+    <h1>Check out these Awesome Contacts!!</h1>
+    <!-- begin contact form -->
+    <section id="ContactInputForm">
+        <h2>Enter a New Contact</h2>
+        <label for="">Name</label>
+        <input type="text" name="name" id="formName">
+        <label for="">Address</label>
+        <input type="text" name="address" id="formAddress">
+        <label for="">Phone Number</label>
+        <input type="tel" name="" id="formPhone">
+        <input type="button" value="Submit" name="formSubmit" id="formSubmit">
+    </section>
+    <article class="output">
+        <h2>Contact List</h2>
+        <!-- entries from contactList.js go here -->
     </article>
 
-    <script src="hellogoodbye.js"></script>
+    <script src="bundle.js"></script>
 </body>
+
 </html>
